--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@
       </div>
     </div>
     <a
-      href="/index.html"
+      href="/"
       style="
         text-align: center;
         margin-bottom: 10px;
