--- a/UserGuide.html
+++ b/UserGuide.html
@@ -174,7 +174,7 @@
         </li>
         <li>Phone: XXXXX-XXXXX</li>
       </ul>
-      <a href="/index.html" style="background-color: rgb(0, 140, 255);color:black;padding:0px 10px;border-radius:6px;box-shadow:black 0px 0px 10px">HOME</a>
+<!--       <a href="/index.html" style="background-color: rgb(0, 140, 255);color:black;padding:0px 10px;border-radius:6px;box-shadow:black 0px 0px 10px">HOME</a> -->
     </div>
   </body>
 </html>
