--- a/UserGuide.html
+++ b/UserGuide.html
@@ -170,7 +170,7 @@
       <ul class="contact">
         <li>
           Email:
-          <a href="mailto:charan@weatherapp.com">charan@gmail.com</a>
+          <a href="mailto:charansrinivas51514@gmail.com">charan@gmail.com</a>
         </li>
         <li>Phone: XXXXX-XXXXX</li>
       </ul>
